@@ -770,3 +770,56 @@
 (when (require 'json nil t)
   (defcase test-json-read nil nil
     (test-assert-eq t (test-read-json-with-unsupported-code-point))))
+
+(defun test-read-xml-with-unsupported-code-point ()
+  (let ((unsupported-code-point
+	 (or (find-least-unsupported-code-point #x0000 #xD7FF)
+	     (find-least-unsupported-code-point #xE000 #x10FFFF))))
+    (cond
+     ((null unsupported-code-point)
+      t)
+     (t
+      (let* ((xml-template
+	      ;; example from http://www.w3.org/TR/xhtml1/#strict
+	      "<?xml version=\"1.0\" encoding=\"UTF-8\"?>
+<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\">
+<html xmlns=\"http://www.w3.org/1999/xhtml\" xml:lang=\"en\" lang=\"en\">
+  <head>
+    <title>test</title>
+  </head>
+  <body>
+    <p>%s</p>
+  </body>
+</html>")
+	     (encoded-str (format "&#%d;" unsupported-code-point))
+	     (xml-str (format xml-template encoded-str))
+	     (replacement-str
+	      (string twittering-unicode-replacement-char))
+	     (result
+	      (with-temp-buffer
+		(insert xml-str)
+		(condition-case err
+		    (let* ((xml
+			    (twittering-xml-parse-region (point-min)
+							 (point-max)))
+			   (str
+			    (elt (assq 'p (assq 'body (assq 'html xml))) 2)))
+		      (if (< emacs-major-version 22)
+			  ;; On Emacs 21, `xml-parse-region' does not resolve
+			  ;; numeric character references.
+			  (twittering-decode-entities-after-parsing-xml str)
+			str))
+		  (error
+		   nil))))
+	     (expected-result replacement-str))
+	(cond
+	 ((null result)
+	  (format "failed to decode %s with an error" encoded-str))
+	 ((equal result expected-result)
+	  t)
+	 (t
+	  (format "failed to decode %s without errors" encoded-str))))))))
+
+(when (require 'xml nil t)
+  (defcase test-xml-parse nil nil
+    (test-assert-eq t (test-read-xml-with-unsupported-code-point))))
